<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reg_Start">
    <TextView
        android:id="@+id/tvStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/joinforgan"
        android:textColor="#6A98FF"
        android:textSize="19dp" />


    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/fewstep"
        android:textColor="#707070"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textStart"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/easycreate"
        android:textColor="#707070"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:stateListAnimator="@null"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_button"
        android:text="@string/begin"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hasStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/alreadyhaveacc"
        android:textColor="@color/colorPrimary"
        android:textSize="11dp" />
    <ImageView
        android:id="@+id/backRegStart"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_chevron_left_black_24dp" />

</RelativeLayout>