<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/white">
    <ImageView
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:id="@+id/ic_top"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_forgan_6_11_18"/>
    <TextView
        android:id="@+id/tvLogin"
        android:layout_below="@id/ic_top"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"

        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#20000000"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editUser"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_edtext"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textSize="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/editUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edtext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/editPass"
        android:stateListAnimator="@null"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/btLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>


    <TextView
        android:id="@+id/orText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btRegis"
        android:layout_below="@+id/googleSign"
        android:layout_marginTop="171dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="15dp"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btRegis"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_btregis"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textColor="#6A98FF"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/btForget"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="7dp"
        android:layout_alignRight="@id/editPass"
        android:text="@string/forgetpassword"
        android:textColor="#707070"

        />
</RelativeLayout>