<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_user_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reg_user_password">

    <TextView
        android:id="@+id/tvUserPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/createpass"
        android:textColor="@color/TextColor"
        android:textSize="19dp"
        android:layout_above="@+id/relativePassWord"/>

    <RelativeLayout
        android:id="@+id/relativePassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/editUserPass"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp"
            android:background="@drawable/round_edtext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="15dp"
            android:hint="@string/password"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvUserPass1"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editUserPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passrequire"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="#707070"/>
        <TextView
            android:id="@+id/tvUserPass2"
            android:layout_below="@+id/tvUserPass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passrequire2"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="#707070" />

        <Button
            android:id="@+id/btUserPass"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:stateListAnimator="@null"
            android:layout_height="40dp"
            android:layout_below="@+id/tvUserPass2"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:text="@string/continued"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold"
            android:visibility="invisible"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/hasSupPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/alreadyhaveacc"
        android:textColor="@color/TextColor"
        android:textSize="11dp" />
    <ImageView
        android:id="@+id/backRegUserPassword"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

</RelativeLayout>