<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_sup_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reg_sup_name">

    <TextView
        android:id="@+id/tvRegSupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeRegSupName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/suppinfo"
        android:textColor="@color/colorPrimary"
        android:textSize="19dp" />

    <RelativeLayout
        android:id="@+id/relativeRegSupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/editRegSupPass"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp"
            android:background="@drawable/round_edtext"
            android:hint="@string/suppid"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="15dp"

            />

        <EditText
            android:id="@+id/editRegSupName"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editRegSupPass"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edtext"
            android:hint="@string/suppname"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btRegSupName"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:stateListAnimator="@null"
            android:layout_height="40dp"
            android:layout_below="@+id/editRegSupName"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_button"
            android:text="@string/continued"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold"
            android:visibility="invisible"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/hasRegSupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/alreadyhaveacc"
        android:textColor="@color/colorPrimary"
        android:textSize="11dp"/>
    <ImageView
        android:id="@+id/backRegSupName"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

</RelativeLayout>